# appointment-scheduling-headlessAPI-rest/appointment-scheduling-headlessAPI-rest-api/src/main/java/appointment/scheduling/headlessAPI/rest/resource/v1_0/AppointmentResource.java
@@ -46,8 +46,12 @@ public interface AppointmentResource {
 
 	public Response addAppointment(Appointment appointment) throws Exception;
 
+	public Response patchAppointment(
+			Long appointmentId, Appointment appointment)
+		throws Exception;
+
 	public Response updateAppointment(
-			Integer appointmentId, Appointment appointment)
+			Long appointmentId, Appointment appointment)
 		throws Exception;
 
 	public Response deleteAppointment(Long appointmentId) throws Exception;
